--- a/zip/index.html
+++ b/zip/index.html
@@ -9,8 +9,6 @@
     <link href="https://aarifalam.life/main/css/main-header.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
 
-
-
 </head>
 <body>
    <div class="header-0105-scroll-progress" id="header0105ScrollProgress" aria-hidden="true"></div>
@@ -214,7 +212,7 @@
                         <span class="original-price">₹ 165</span>
                         <span class="free-price">FREE</span>
                     </div>
-                    <button class="download-btn" data-file="download/aa0105.zip">
+                    <button class="download-btn" data-file="aa0105.zip">
                         <i class="fas fa-download"></i> Download Now
                     </button>
                 </div>
@@ -239,7 +237,7 @@
                         <span class="original-price">₹ 500</span>
                         <span class="free-price">FREE</span>
                     </div>
-                    <button class="download-btn" data-file="download/neet-quiz.zip">
+                    <button class="download-btn" data-file="neet-quiz.zip">
                         <i class="fas fa-download"></i> Download Now
                     </button>
                 </div>
@@ -301,4 +299,5 @@
     <script src="js/script.js"></script>
 
 </body>
+
 </html>
