--- a/zip/index.html
+++ b/zip/index.html
@@ -262,7 +262,7 @@
                         <span class="original-price">$ 8</span>
                         <span class="free-price">FREE</span>
                     </div>
-                    <button class="download-btn" data-file="download/thank-you.zip">
+                    <button class="download-btn" data-file="thank-you.zip">
                         <i class="fas fa-download"></i> Download Now
                     </button>
                 </div>
@@ -287,7 +287,7 @@
                         <span class="original-price">$12.99</span>
                         <span class="free-price">FREE</span>
                     </div>
-                    <button class="download-btn" data-file="download/thank-you.zip">
+                    <button class="download-btn" data-file="thank-you.zip">
                         <i class="fas fa-download"></i> Download Now
                     </button>
                 </div>
@@ -301,4 +301,5 @@
 </body>
 
 </html>
+
 
